tests/rosetta/out/Pascal/2048.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/2048.pas
2048.pas(19,14) Error: Identifier not found "SIZE"
2048.pas(23,16) Error: Identifier not found "SIZE"
2048.pas(25,25) Error: Identifier not found "_appendList"
2048.pas(25,49) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
